--- a/resources/js/src/i18n/lang/en.json
+++ b/resources/js/src/i18n/lang/en.json
@@ -133,6 +133,9 @@
     "user_already_exist_is_already_created": "User already exist is already created",
     "reset_link_sent_email": "Reset link sent email",
 
+    "managements": "Managements",
+    "users": "Users",
+
     "server_validation": {
         "email_not_exist": "Email not exist",
         "the_email_field_is_required": "The email field is required",
